--- a/storelocator/static/storelocator/scss/map.scss
+++ b/storelocator/static/storelocator/scss/map.scss
@@ -128,7 +128,7 @@
     #map {
         width: 95%;
         max-width: 800px;
-        height: 40dvh;
+        height: 40vh;
         max-height: 420px;
         background: var(--border);
         border-radius: 0.5rem 0.5rem 0 0;
